@@ -5,6 +5,7 @@
 	* src/gen/lib/note.py: make independent of MarkupText.py
 
 2007-10-08  Alex Roitman  <shura@gramps-project.org>
+	* src/GrampsDbUtils/_ReadXML.py (stop_research): Remove old usage.
 	* src/GrampsCfg.py (get_researcher): Remove old usage.
 	* src/gen/db/dbdir.py (__close_metadata): Store tuple;
 	(_load_metadata): Load from tuple;
